# TCI-FMartinez

./: .gitattributes  .gitignore  README.md
00_PLANTILLA PROYECTO/: README.md
01_MASS_DUMPER/: LEEME GPT.txt  THIRD_PARTY_NOTICES.md  pyproject.toml
01_MASS_DUMPER/docs/templates/: adr-template.md  experiment-template.md  measurement-log-template.md  meeting-notes-template.md  risk-register-template.md  task.yml  test-protocol-template.md  test-report-template.md
01_MASS_DUMPER/src/tmd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
01_MASS_DUMPER/src/tmd/plots/: frf_plots.py
01_MASS_DUMPER/src/tmd/simulation/: sdof.py
01_MASS_DUMPER/src/tmd/utils/: io.py
01_MASS_DUMPER/tests/: test_sdof.py
Calculo_motor_gtry/: 01_motor_sizing_RESULTADO.txt  01_motors_sizing.py  02_motors_sizing.py  03_motors_sizing.py  resultados_motor_v03.txt
Calculo_motores/: Chapa01.dwg  INFO Referencias.docx  cutting_sample.dxf  machine_params.json  main.py  movements01.dwg
Modelizado_laser/: main_v03.py
Param_editor/: EXCELtoPARAM.spec  PARAMtoEXCEL.spec  excel_to_param.py  excel_to_param_old.py  leeme.txt  main.py  parametros.xlsx  pendiente.rd
Reticula/: test_concepto.py
Simulacion_motores/: genera_dxf.py  genera_pieza_dxf.py  main_v2.py  modelizado_a.py
Tidy_param/: Resumen_estadistico.py  main.py  plot_global.py  stat_curves.py  stat_curves_old.py
Tolerance/: main.py
parser_lpp/: ID1_221785-7.cnc  SKRLJ-INOX-10.cnc  TEST80x80P101R.lpp  Test80x50P103.cnc  draw_part.py  main.py  tests.py  tests_psrts-py  tests_re.py
parser_lpp_BATCH/: README.md  main.py
(+2961 files in other folders)
